--- a/JN/interactive-webapp.html
+++ b/JN/interactive-webapp.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 20px;
       text-align: center;
-      background: #f9f9f9;
+      background: #121212;
     }
     canvas {
       display: block;
