--- a/JN/aboutme.html
+++ b/JN/aboutme.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Me - Justin Neijndorff</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
   <style>
     /* Global & Reset Styles */
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -40,6 +42,12 @@
     header h1 {
       font-size: 1.8em;
       margin-right: 20px;
+      cursor: pointer;
+      transition: transform 0.3s, color 0.3s;
+    }
+    header h1:hover {
+      color: #ff6600;
+      transform: scale(1.1);
     }
     /* Navbar Links */
     nav.nav-links a {
@@ -99,6 +107,12 @@
       margin-bottom: 20px;
       text-transform: uppercase;
       letter-spacing: 1px;
+      cursor: pointer;
+      transition: transform 0.3s, color 0.3s;
+    }
+    .section-title:hover {
+      transform: scale(1.05);
+      color: #ff6600;
     }
     .section-content {
       font-size: 1.1em;
@@ -110,10 +124,34 @@
       border-radius: 50%;
       margin-right: 20px;
       object-fit: cover;
+      transition: transform 0.3s;
+    }
+    .cv-photo:hover {
+      transform: rotate(10deg) scale(1.05);
     }
     .cv-header {
       display: flex;
       align-items: center;
+    }
+    .text-animate {
+      display: inline-block;
+      font-size: 1.5em;
+      transition: transform 0.3s, color 0.3s;
+      cursor: pointer;
+    }
+    .text-animate:hover {
+      transform: rotate(-5deg) scale(1.2);
+      color: #ff6600;
+    }
+    /* Text hover effect for paragraphs */
+    .text-hover {
+      display: inline-block;
+      transition: transform 0.3s ease, color 0.3s ease;
+      cursor: pointer;
+    }
+    .text-hover:hover {
+      transform: rotate(-3deg) scale(1.05);
+      color: #ff6600;
     }
   </style>
 </head>
@@ -139,16 +177,17 @@
       <button id="contrastToggle">Toggle Contrast</button>
     </div>
   </header>
+  
   <!-- Main Content Area with Internal Sections -->
   <main>
-    <h1>Go through the Drop down, and find out more 'about me'</h1>
+    <h1 class="text-animate">Go through the Drop down, and find out more 'about me'</h1>
 
     <!-- About Me Section -->
     <section id="about" class="content-section">
       <div class="section-content">
-        <h3>Justin Neijndorff</h3>
-        <p>Welcome to my portfolio. I am a software developer with a passion for technology. I began my career in various fields, including as a cleaner and an intern in bakery shops, before pursuing my passion for ICT and software development.</p>
-        <p>Throughout my journey, I've learned to appreciate the value of hard work, perseverance, and a continuous thirst for knowledge. I now specialize in building dynamic web applications and solving real-world problems with code.</p>
+        <h3 class="text-animate">Justin Neijndorff</h3>
+        <p class="text-hover">Welcome to my portfolio. I am a software developer with a passion for technology. I began my career in various fields, including as a cleaner and an intern in bakery shops, before pursuing my passion for ICT and software development.</p>
+        <p class="text-hover">Throughout my journey, I've learned to appreciate the value of hard work, perseverance, and a continuous thirst for knowledge. I now specialize in building dynamic web applications and solving real-world problems with code.</p>
       </div>
     </section>
 
@@ -158,40 +197,41 @@
       <div class="section-content">
         <div class="cv-header">
           <!-- Add your photo here -->
-          <img src="your-photo.jpg" alt="Your Photo" class="cv-photo" />
+          <img src="images/justin-neijndorff.jpg" alt="Justin Neijndorff" class="cv-photo" />
           <div>
-            <h3>Justin Neijndorff</h3>
-            <p><strong>Social media:</strong> 
+            <h3 class="text-animate">Justin Neijndorff</h3>
+            <p class="text-hover"><strong>Social media:</strong> 
               <a href="https://www.linkedin.com/in/justin-neijndorff-ba72792a5/" target="_blank">
-                 <img src="LinkedIn.png" alt="LinkedIn" style="height: 20px; vertical-align: middle;" />
+                 <img src="images/LinkedIn.png" alt="LinkedIn" style="height: 20px; vertical-align: middle;" />
               </a>, 
               <a href="https://github.com/SpaceExploring1" target="_blank">
-                 <img src="25231.png" alt="GitHub" style="height: 20px; vertical-align: middle;" />
+                 <img src="images/25231.png" alt="GitHub" style="height: 20px; vertical-align: middle;" />
               </a>
             </p>
           </div>
         </div>
-        <h4>Professional Experience</h4>
-        <p><strong>Cleaner</strong> (Various Locations) — 2016 – 2018</p>
+        <h4 class="section-title">Professional Experience</h4>
+        <p class="text-hover"><strong>Cleaner</strong> (Various Locations) — 2021 – 2022</p>
         <ul>
-          <li>Responsible for maintaining cleanliness in various commercial and residential spaces.</li>
-          <li>Ensured a safe and hygienic environment for clients and their staff.</li>
+          <li class="text-hover">Responsible for maintaining cleanliness in various commercial and residential spaces.</li>
+          <li class="text-hover">Ensured a safe and hygienic environment for clients and their staff.</li>
+          <li class="text-hover">Gained discipline and learned how it is to connect with peers</li>
         </ul>
-        <p><strong>Internship - Bakery Shop</strong> (Local Bakery) — 2017 – 2018</p>
+        <p class="text-hover"><strong>Internship - Bakery Shop</strong> (Local Bakery) — 2019 – 2021</p>
         <ul>
-          <li>Assisted in daily operations including inventory management, customer service, and product preparation.</li>
-          <li>Developed a strong understanding of customer satisfaction and quality control.</li>
+          <li class="text-hover">Assisted in daily operations including inventory management, customer service, and product preparation.</li>
+          <li class="text-hover">Developed a strong understanding of customer satisfaction and quality control.</li>
         </ul>
-        <p><strong>Software Development Student</strong> (Yonder mbo) — 2020 – Present</p>
+        <p class="text-hover"><strong>Software Development Student</strong> (Yonder mbo) — 2023 – Present</p>
         <ul>
-          <li>Currently studying software development, focusing on web technologies and modern programming frameworks.</li>
-          <li>Collaborating with peers on projects and gaining practical experience through coding assignments and coursework.</li>
+          <li class="text-hover">Currently studying software development, focusing on web technologies and modern programming frameworks.</li>
+          <li class="text-hover">Collaborating with peers on projects and gaining practical experience through coding assignments and coursework.</li>
         </ul>
-        <h4>Education</h4>
-        <p><strong>Software Development Program</strong>, Yonder mbo (2020 – Present)</p>
+        <h4 class="section-title">Education</h4>
+        <p class="text-hover"><strong>Software Development Program</strong>, Yonder mbo (2023 – Present)</p>
         <ul>
-          <li>Currently pursuing a degree in software development, focusing on building web applications and modern programming techniques.</li>
-          <li>Participating in group projects and developing a strong foundation in coding, problem-solving, and system design.</li>
+          <li class="text-hover">Currently pursuing a degree in software development, focusing on building web applications and modern programming techniques.</li>
+          <li class="text-hover">Participating in group projects and developing a strong foundation in coding, problem-solving, and system design.</li>
         </ul>
       </div>
     </section>
@@ -200,10 +240,10 @@
     <section id="projects" class="content-section">
       <div class="section-title">Projects</div>
       <div class="section-content">
-        <h3>Interactive Web App</h3>
-        <p><a href="interactive-webapp.html">An innovative platform that combines real‑time data with responsive design to deliver an immersive user experience.</a></p>
-        <h3>Data Visualization Dashboard</h3>
-        <p>A dynamic tool that transforms raw data into meaningful insights through beautiful, interactive visualizations.</p>
+        <h3 class="text-hover">Interactive Web App</h3>
+        <p class="text-hover"><a href="interactive-webapp.html">An innovative platform that combines real‑time data with responsive design to deliver an immersive user experience.</a></p>
+        <h3 class="text-hover">Data Visualization Dashboard</h3>
+        <p class="text-hover">A dynamic tool that transforms raw data into meaningful insights through beautiful, interactive visualizations.</p>
       </div>
     </section>
   </main>
@@ -246,77 +286,17 @@
     -------------------------------------- */
     let contrastMode = false;
     const contrastToggle = document.getElementById("contrastToggle");
-    let currentBgColor = "#121212"; // default dark background
+    let currentBackgroundColor = window.getComputedStyle(document.body).backgroundColor;
 
     contrastToggle.addEventListener("click", () => {
       contrastMode = !contrastMode;
       if (contrastMode) {
-        // Light mode
-        document.body.style.background = "#f1fdff";
-        document.body.style.color = "#000";
-        currentBgColor = "#f1fdff";
-        contrastToggle.textContent = "Dark Mode";
+        document.body.style.backgroundColor = "#ffffff";
+        document.body.style.color = "#121212";
       } else {
-        // Dark mode
-        document.body.style.background = "#121212";
-        document.body.style.color = "#fff";
-        currentBgColor = "#121212";
-        contrastToggle.textContent = "Light Mode";
+        document.body.style.backgroundColor = "#121212";
+        document.body.style.color = "#ffffff";
       }
-    });
-
-    /* -------------------------------------
-       p5.js Interactive Particle Background
-    -------------------------------------- */
-    let particles = [];
-    const numParticles = 150;
-
-    function setup() {
-      const canvas = createCanvas(windowWidth, windowHeight);
-      canvas.parent("background");
-      for (let i = 0; i < numParticles; i++) {
-        particles.push(new Particle());
-      }
-    }
-
-    function draw() {
-      // Use background() so that the current contrast mode is reflected
-      background(currentBgColor);
-      for (let particle of particles) {
-        particle.update();
-        particle.show();
-      }
-    }
-
-    class Particle {
-      constructor() {
-        this.pos = createVector(random(width), random(height));
-        this.vel = createVector(random(-1, 1), random(-1, 1));
-        this.size = random(2, 5);
-        this.alpha = random(80, 200);
-      }
-      update() {
-        this.pos.add(this.vel);
-        // Wrap around edges
-        if (this.pos.x > width) this.pos.x = 0;
-        if (this.pos.x < 0) this.pos.x = width;
-        if (this.pos.y > height) this.pos.y = 0;
-        if (this.pos.y < 0) this.pos.y = height;
-      }
-      show() {
-        noStroke();
-        fill(255, this.alpha);
-        ellipse(this.pos.x, this.pos.y, this.size);
-      }
-    }
-
-    function windowResized() {
-      resizeCanvas(windowWidth, windowHeight);
-    }
-
-    // Trigger the default section change when the page loads
-    document.addEventListener('DOMContentLoaded', () => {
-      switchSection("cv");
     });
   </script>
 </body>
