--- a/JN/index.html
+++ b/JN/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
   <style>
-    /* Global & Reset Styles */
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Roboto', sans-serif;
@@ -15,7 +16,6 @@
       overflow-x: hidden;
       transition: background 0.5s, color 0.5s;
     }
-    /* Container for the interactive background (p5.js attaches its canvas here) */
     #background {
       position: fixed;
       top: 0;
@@ -24,7 +24,6 @@
       height: 100%;
       z-index: -1;
     }
-    /* Header Styles */
     header {
       position: fixed;
       top: 0;
@@ -38,225 +37,152 @@
       z-index: 10;
     }
     header h1 {
-      font-size: 1.8em;
-      margin-right: 20px;
+      font-size: 2em;
+      cursor: pointer;
+      transition: transform 0.3s, color 0.3s;
     }
-    /* Navbar Links */
-    nav.nav-links a {
+    header h1:hover {
+      color: #ff6600;
+      transform: scale(1.1);
+    }
+    nav a {
       margin-right: 15px;
       text-decoration: none;
       color: inherit;
       font-weight: 500;
       transition: color 0.3s;
     }
-    nav.nav-links a:hover {
+    nav a:hover {
       color: #ff6600;
     }
-    /* Right-side controls (dropdown & contrast toggle) */
-    .header-right {
-      display: flex;
-      align-items: center;
-      gap: 15px;
-    }
-    #sectionSelector {
-      font-size: 1em;
-      padding: 8px 12px;
-      border-radius: 5px;
-      border: none;
-      outline: none;
-      background: #222;
-      color: #fff;
-      cursor: pointer;
-    }
     #contrastToggle {
-      font-size: 1em;
-      padding: 8px 12px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
       background: #ff6600;
       color: #fff;
+      padding: 10px 15px;
+      border: none;
+      cursor: pointer;
       transition: background 0.3s;
     }
     #contrastToggle:hover {
       background: #ff8533;
     }
-    /* Main Content Area */
     main {
       padding: 120px 20px 60px;
       min-height: 100vh;
+      text-align: center;
+      max-width: 800px;
+      margin: 0 auto;
     }
-    .content-section {
-      display: none;
-      opacity: 0;
-      transition: opacity 0.5s ease-in-out;
+    #myStory {
+      margin-top: 40px;
+      text-align: left;
+      line-height: 1.8;
     }
-    .content-section.active {
-      display: block;
-    }
-    .section-title {
+    #myStory h2 {
       font-size: 2em;
       margin-bottom: 20px;
       text-transform: uppercase;
       letter-spacing: 1px;
+      cursor: pointer;
+      transition: transform 0.3s, color 0.3s;
     }
-    .section-content {
+    #myStory h2:hover {
+      transform: scale(1.05);
+      color: #ff6600;
+    }
+    .story-paragraph {
       font-size: 1.1em;
-      line-height: 1.6;
+      margin-bottom: 20px;
+      cursor: pointer;
+      transition: transform 0.3s, color 0.3s;
+    }
+    .story-paragraph:hover {
+      transform: translateX(5px);
+      color: #ff6600;
+    }
+    .text-animate {
+      display: inline-block;
+      font-size: 1.5em;
+      transition: transform 0.3s, color 0.3s;
+      cursor: pointer;
+    }
+    .text-animate:hover {
+      transform: rotate(-5deg) scale(1.2);
+      color: #ff6600;
     }
   </style>
 </head>
 <body>
-  <!-- p5.js Interactive Background -->
   <div id="background"></div>
-
-  <!-- Header: Navbar + Internal Section Selector & Contrast Toggle -->
+  
   <header>
-    <div class="header-left" style="display:flex; align-items:center;">
-      <h1>My Portfolio</h1>
-      <nav class="nav-links">
+    <div class="header-left" style="display: flex; align-items: center;">
+      <h1 id="title">Justin Neijndorff</h1>
+      <nav style="margin-left: 20px;">
         <a href="index.html">Home</a>
         <a href="aboutme.html">About</a>
       </nav>
     </div>
-    <div class="header-right">
-      <select id="sectionSelector">
-        <option value="about">About Me</option>
-        <option value="cv">CV</option>
-        <option value="projects">Projects</option>
-      </select>
-      <button id="contrastToggle">Toggle Contrast</button>
-    </div>
+    <button id="contrastToggle">Toggle Contrast</button>
   </header>
-
-  <!-- Main Content Area with Internal Sections -->
+  
   <main>
-    <!-- About Me Section -->
-    <section id="about" class="content-section active" style="display:block; opacity:1;">
-      <div class="section-content">
-        <h3>Justin Neijndorff</h3>
-        <p>Welcome to my portfolio. I am a proficient software developer with a passion for building dynamic web experiences and innovative solutions.</p>
-        <p>I enjoy exploring new technologies, creating interactive projects, and always pushing the limits of web design and development.</p>
-      </div>
-    </section>
-
-    <!-- CV Section -->
-    <section id="cv" class="content-section">
-      <div class="section-title">Curriculum Vitae</div>
-      <div class="section-content">
-        <h3>Professional Experience</h3>
-        <p><strong>Software Developer at TechCorp</strong> (2020 – Present)</p>
-        <ul>
-          <li>Developed cutting‑edge web applications using modern frameworks.</li>
-          <li>Collaborated with multidisciplinary teams using agile methodologies.</li>
-        </ul>
-        <h3>Education</h3>
-        <p><strong>Bachelor of Computer Science</strong>, University of Excellence (2016 – 2020)</p>
-      </div>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects" class="content-section">
-      <div class="section-title">Projects</div>
-      <div class="section-content">
-        <h3>Interactive Web App</h3>
-        <p>An innovative platform that combines real‑time data with responsive design to deliver an immersive user experience.</p>
-        <h3>Data Visualization Dashboard</h3>
-        <p>A dynamic tool that transforms raw data into meaningful insights through beautiful, interactive visualizations.</p>
-      </div>
+    <p class="text-animate">Creative storyteller. Innovator. Web artist.</p>
+    
+    <section id="myStory">
+      <h2>My Story</h2>
+      <p class="story-paragraph">
+        I was once a fragile and scared boy, wandering through a world that often felt too vast and intimidating. Every shadow whispered of uncertainty, every mirror a reflection of self-doubt.
+      </p>
+      <p class="story-paragraph">
+        In the depths of painful self-loathing, I discovered a hidden strength. Through struggle, I found a spark of spirituality that transformed my heart and mind, igniting a creative fire within me.
+      </p>
+      <p class="story-paragraph">
+        Today, I am a creative soul—open-minded, deeply connected with animals, and passionate about the simple joys of life. Whether it's the comforting taste of pasta, the delight of pancakes and fresh bread, or the natural sweetness of fruit, I embrace every flavor life offers.
+      </p>
+      <p class="story-paragraph">
+        I wander life's many paths with wonder and purpose, channeling my experiences and growth into my coding. Every project is a canvas, a chance to express my journey and inspire others through creative storytelling.
+      </p>
     </section>
   </main>
-
-  <!-- External Libraries -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
   
   <script>
-    /* -------------------------------------
-       Internal Section Transitions with GSAP
-    -------------------------------------- */
-    const sectionSelector = document.getElementById("sectionSelector");
-    const sections = document.querySelectorAll(".content-section");
-
-    function switchSection(targetId) {
-      const currentSection = document.querySelector(".content-section.active");
-      if (currentSection.id === targetId) return;
-
-      gsap.to(currentSection, {
-        opacity: 0,
-        duration: 0.5,
-        onComplete: () => {
-          currentSection.classList.remove("active");
-          currentSection.style.display = "none";
-          const targetSection = document.getElementById(targetId);
-          targetSection.style.display = "block";
-          targetSection.classList.add("active");
-          gsap.fromTo(targetSection, { opacity: 0 }, { opacity: 1, duration: 0.5 });
-        }
-      });
-    }
-    sectionSelector.addEventListener("change", (e) => {
-      switchSection(e.target.value);
-    });
-
-    /* -------------------------------------
-       Contrast Toggle Functionality
-    -------------------------------------- */
-    // contrastMode = false (dark) by default, true for light mode.
-    let contrastMode = false;
-    const contrastToggle = document.getElementById("contrastToggle");
-    let currentBgColor = "#121212"; // default dark background
-
-    contrastToggle.addEventListener("click", () => {
-      contrastMode = !contrastMode;
-      if (contrastMode) {
-        // Light mode
+    document.getElementById("contrastToggle").addEventListener("click", () => {
+      document.body.classList.toggle("light-mode");
+      if (document.body.classList.contains("light-mode")) {
         document.body.style.background = "#f1fdff";
         document.body.style.color = "#000";
-        currentBgColor = "#f1fdff";
-        contrastToggle.textContent = "Dark Mode";
+        document.getElementById("contrastToggle").textContent = "Dark Mode";
       } else {
-        // Dark mode
         document.body.style.background = "#121212";
         document.body.style.color = "#fff";
-        currentBgColor = "#121212";
-        contrastToggle.textContent = "Light Mode";
+        document.getElementById("contrastToggle").textContent = "Light Mode";
       }
     });
 
-    /* -------------------------------------
-       p5.js Interactive Particle Background
-    -------------------------------------- */
     let particles = [];
-    const numParticles = 150;
-
     function setup() {
       const canvas = createCanvas(windowWidth, windowHeight);
       canvas.parent("background");
-      for (let i = 0; i < numParticles; i++) {
+      for (let i = 0; i < 150; i++) {
         particles.push(new Particle());
       }
     }
-
     function draw() {
-      // Use background() so that the current contrast mode is reflected
-      background(currentBgColor);
-      for (let particle of particles) {
-        particle.update();
-        particle.show();
+      background(getComputedStyle(document.body).backgroundColor);
+      for (let p of particles) {
+        p.update();
+        p.show();
       }
     }
-
     class Particle {
       constructor() {
         this.pos = createVector(random(width), random(height));
         this.vel = createVector(random(-1, 1), random(-1, 1));
         this.size = random(2, 5);
-        this.alpha = random(80, 200);
       }
       update() {
         this.pos.add(this.vel);
-        // Wrap around edges
         if (this.pos.x > width) this.pos.x = 0;
         if (this.pos.x < 0) this.pos.x = width;
         if (this.pos.y > height) this.pos.y = 0;
@@ -264,11 +190,10 @@
       }
       show() {
         noStroke();
-        fill(255, this.alpha);
+        fill(255, 150);
         ellipse(this.pos.x, this.pos.y, this.size);
       }
     }
-
     function windowResized() {
       resizeCanvas(windowWidth, windowHeight);
     }
