--- a/JN/aboutme.html
+++ b/JN/aboutme.html
@@ -138,20 +138,28 @@
       font-size: 1.5em;
       transition: transform 0.3s, color 0.3s;
       cursor: pointer;
+      transform-origin: center center; /* Ensures the scale happens from the center */
     }
     .text-animate:hover {
       transform: rotate(-5deg) scale(1.2);
       color: #ff6600;
+      /* Prevent text from overflowing */
+      z-index: 10;  /* Ensure the text appears above other elements */
+      position: relative;
     }
     /* Text hover effect for paragraphs */
     .text-hover {
       display: inline-block;
       transition: transform 0.3s ease, color 0.3s ease;
       cursor: pointer;
+      transform-origin: center center; /* Ensures the scale happens from the center */
     }
     .text-hover:hover {
       transform: rotate(-3deg) scale(1.05);
       color: #ff6600;
+      /* Prevent text from overflowing */
+      z-index: 10;  /* Ensure the text appears above other elements */
+      position: relative;
     }
   </style>
 </head>
@@ -197,7 +205,7 @@
       <div class="section-content">
         <div class="cv-header">
           <!-- Add your photo here -->
-          <img src="images/justin-neijndorff.jpg" alt="Justin Neijndorff" class="cv-photo" />
+          <img src="image0.webp" alt="Justin Neijndorff" class="cv-photo" />
           <div>
             <h3 class="text-animate">Justin Neijndorff</h3>
             <p class="text-hover"><strong>Social media:</strong> 
