--- a/JN/aboutme.html
+++ b/JN/aboutme.html
@@ -219,7 +219,7 @@
           </div>
         </div>
         <h4 class="section-title">Professional Experience</h4>
-        <p class="text-hover"><strong>Cleaner</strong> (Various Locations) — 2021 – 2022</p>
+        <p class="text-hover"><strong>Cleaner</strong> (Various Locations that 'Proschoon' attends to) — 2021 – 2022</p>
         <ul>
           <li class="text-hover">Responsible for maintaining cleanliness in various commercial and residential spaces.</li>
           <li class="text-hover">Ensured a safe and hygienic environment for clients and their staff.</li>
