--- a/JN/index.html
+++ b/JN/index.html
@@ -110,6 +110,27 @@
       transform: rotate(-5deg) scale(1.2);
       color: #ff6600;
     }
+    /* Logo placeholder style */
+    #logo-placeholder {
+  position: absolute;
+  top: 100px; /* Moves it further below the navbar */
+  right: 40px;
+  width: 180px; /* Increased width */
+  height: 120px; /* Increased height */
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+
+#logo-placeholder img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+
+
   </style>
 </head>
 <body>
@@ -125,6 +146,9 @@
     </div>
     <button id="contrastToggle">Toggle Contrast</button>
   </header>
+  
+  <!-- Logo Placeholder (positioned below the navbar, on the right) -->
+  <div id="logo-placeholder"><img src="JN_good Logo.svg" alt=""></div>
   
   <main>
     <p class="text-animate">Creative storyteller. Innovator. Web artist.</p>
