--- a/JN/interactive-webapp.html
+++ b/JN/interactive-webapp.html
@@ -44,10 +44,29 @@
       font-weight: bold;
       color: #333;
     }
+    #logo-placeholder {
+  position: absolute;
+  top: 100px; /* Moves it further below the navbar */
+  right: 40px;
+  width: 180px; /* Increased width */
+  height: 120px; /* Increased height */
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+
+#logo-placeholder img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+  <div id="logo-placeholder"><img src="JN_good Logo.svg" alt=""></div>
 
   <h1>Click Tracking Web App</h1>
   <p>Click on the button below to track clicks per second.</p>
