--- a/JN/interactive-webapp.html
+++ b/JN/interactive-webapp.html
@@ -9,6 +9,7 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
+      color: white;
       padding: 20px;
       text-align: center;
       background: #121212;
