--- a/JN/aboutme.html
+++ b/JN/aboutme.html
@@ -267,8 +267,9 @@
     <section id="projects" class="content-section">
       <div class="section-title">Projects</div>
       <div class="section-content">
+        <p class="text-hover">A pacman game <a href="../JN/chatgpt game/chatgptgame-1.html"></a>
         <h3 class="text-hover">Interactive Web App</h3>
-        <p class="text-hover"><a href="interactive-webapp.html">An innovative platform that combines real‑time data with responsive design to deliver an immersive user experience.</a></p>
+        <p class="text-hover">An innovative platform that combines real‑time data with responsive design to deliver an immersive user experience.<a href="interactive-webapp.html"></a></p>
         <h3 class="text-hover">Data Visualization Dashboard</h3>
         <p class="text-hover">A dynamic tool that transforms raw data into meaningful insights through beautiful, interactive visualizations.</p>
       </div>
