--- a/JN/aboutme.html
+++ b/JN/aboutme.html
@@ -229,10 +229,10 @@
             <h3 class="text-animate">Justin Neijndorff</h3>
             <p class="text-hover"><strong>Social media:</strong> 
               <a href="https://www.linkedin.com/in/justin-neijndorff-ba72792a5/" target="_blank">
-                 <img src="images/LinkedIn.png" alt="LinkedIn" style="height: 20px; vertical-align: middle;" />
+                 <img src="LinkedIn.png" alt="LinkedIn" style="height: 20px; vertical-align: middle;" />
               </a>, 
               <a href="https://github.com/SpaceExploring1" target="_blank">
-                 <img src="images/25231.png" alt="GitHub" style="height: 20px; vertical-align: middle;" />
+                 <img src="25231.png" alt="GitHub" style="height: 20px; vertical-align: middle;" />
               </a>
             </p>
           </div>
