--- a/JN/index.html
+++ b/JN/index.html
@@ -7,131 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Roboto', sans-serif;
-      background: #121212;
-      color: #fff;
-      overflow-x: hidden;
-      transition: background 0.5s, color 0.5s;
-    }
-    #background {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-    }
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      padding: 15px 40px;
-      background: rgba(0, 0, 0, 0.6);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      z-index: 10;
-    }
-    header h1 {
-      font-size: 2em;
-      cursor: pointer;
-      transition: transform 0.3s, color 0.3s;
-    }
-    header h1:hover {
-      color: #ff6600;
-      transform: scale(1.1);
-    }
-    nav a {
-      margin-right: 15px;
-      text-decoration: none;
-      color: inherit;
-      font-weight: 500;
-      transition: color 0.3s;
-    }
-    nav a:hover {
-      color: #ff6600;
-    }
-    #contrastToggle {
-      background: #ff6600;
-      color: #fff;
-      padding: 10px 15px;
-      border: none;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    #contrastToggle:hover {
-      background: #ff8533;
-    }
-    main {
-      padding: 120px 20px 60px;
-      min-height: 100vh;
-      text-align: center;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-    #myStory {
-      margin-top: 40px;
-      text-align: left;
-      line-height: 1.8;
-    }
-    #myStory h2 {
-      font-size: 2em;
-      margin-bottom: 20px;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      cursor: pointer;
-      transition: transform 0.3s, color 0.3s;
-    }
-    #myStory h2:hover {
-      transform: scale(1.05);
-      color: #ff6600;
-    }
-    .story-paragraph {
-      font-size: 1.1em;
-      margin-bottom: 20px;
-      cursor: pointer;
-      transition: transform 0.3s, color 0.3s;
-    }
-    .story-paragraph:hover {
-      transform: translateX(5px);
-      color: #ff6600;
-    }
-    .text-animate {
-      display: inline-block;
-      font-size: 1.5em;
-      transition: transform 0.3s, color 0.3s;
-      cursor: pointer;
-    }
-    .text-animate:hover {
-      transform: rotate(-5deg) scale(1.2);
-      color: #ff6600;
-    }
-    /* Logo placeholder style */
-    #logo-placeholder {
-  position: absolute;
-  top: 100px; /* Moves it further below the navbar */
-  right: 40px;
-  width: 180px; /* Increased width */
-  height: 120px; /* Increased height */
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-}
-
-#logo-placeholder img {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
-}
-
-
-  </style>
+  <link rel="stylesheet" href="style.css">
+   
 </head>
 <body>
   <div id="background"></div>
@@ -170,7 +47,7 @@
     </section>
   </main>
   
-  <script>
+  <script src="script.js">
     document.getElementById("contrastToggle").addEventListener("click", () => {
       document.body.classList.toggle("light-mode");
       if (document.body.classList.contains("light-mode")) {
