--- a/JN/aboutme.html
+++ b/JN/aboutme.html
@@ -12,7 +12,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Roboto', sans-serif;
-      background: #121212;
+      background: red;
       color: #fff;
       overflow-x: hidden;
       transition: background 0.5s, color 0.5s;
@@ -267,7 +267,7 @@
     <section id="projects" class="content-section">
       <div class="section-title">Projects</div>
       <div class="section-content">
-        <p class="text-hover">A pacman game <a href="../JN/chatgpt game/chatgptgame-1.html"></a>
+        <p class="text-hover">A pacman game <a href="/JN/chatgpt game/chatgptgame-1.html"></a></p>
         <h3 class="text-hover">Interactive Web App</h3>
         <p class="text-hover">An innovative platform that combines real‑time data with responsive design to deliver an immersive user experience.<a href="interactive-webapp.html"></a></p>
         <h3 class="text-hover">Data Visualization Dashboard</h3>
